<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.bennohan.myfriends.database.User" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D8D4D4"
        android:orientation="vertical"
        tools:context=".ui.home.HomeActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_120sdp"
            android:background="@drawable/view_border">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_34sdp"
                android:text='@{"Hello " + user.name}'
                tools:text="hello"
                android:textColor="@color/white"
                android:textSize="@dimen/_18sdp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/ivPhoto"
                app:layout_constraintHorizontal_bias="0.089"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_35sdp"
                android:text="@string/nice_to_see_you"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />

            <ImageView
                android:contentDescription="@string/profile_image"
                android:id="@+id/ivPhoto"
                imageUrlCircle='@{user.photo}'
                android:layout_width="@dimen/_35sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_34sdp"
                android:layout_marginEnd="@dimen/_12sdp"
                app:layout_constraintEnd_toStartOf="@+id/btnMenu"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:contentDescription="@string/menu_button"
                android:id="@+id/btnMenu"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginTop="@dimen/_34sdp"
                android:layout_marginEnd="@dimen/_19sdp"
                android:src="@drawable/ic_baseline_menu_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>





        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/SwipeLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvFriends"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="@dimen/_50sdp"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:spanCount="2"
                    tools:listitem="@layout/item_friends" />

                <TextView
                    android:id="@+id/tvDataKosong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/friends_kosong"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_23sdp"
                    android:visibility="gone" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    app:cardCornerRadius="@dimen/_10sdp">


                    <EditText
                        android:id="@+id/searchView"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_30sdp"
                        android:drawableStart="@drawable/ic_baseline_search_24"
                        android:layout_margin="@dimen/_5sdp"
                        android:autofillHints="name"
                        android:backgroundTint="#00FFFFFF"                    app:boxStrokeWidth="0dp"
                        android:hint="@string/search_your_friends"
                        android:inputType="text"
                        android:maxLines="1"
                        android:paddingStart="@dimen/_8sdp"
                        android:textColorHint="#2E2E2E"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="RtlSymmetry" />

                </androidx.cardview.widget.CardView>

            </FrameLayout>


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    </LinearLayout>
</layout>
